tests/paczka1/small_fuzzy/53444600.err
Error in line 13: qBskmbZfdo0 A762 88,9
